packages/typ/tests/fixtures/diagnostics/0108_core_node_payload_mismatch_09.ml.expected
File "0108_core_node_payload_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0108_core_node_payload_mismatch_09 is not a valid module name.

File "0108_core_node_payload_mismatch_09.ml", line 2, characters 24-28:
2 | let _ : int node = Node true
                            ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
